--- a/clase-2309.css
+++ b/clase-2309.css
@@ -1,3 +1,6 @@
+#warningEmoji {
+    color:red;
+}
 body {
     font-family: 'Arial', sans-serif;
     padding: 20px;
@@ -48,4 +51,35 @@ img {
     margin-top: 20px;
     background-color: #e0e0e0;
     padding: 10px;
+}
+
+.classButton {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: xx-large;
+    font-weight: bolder;
+    color: white;
+    background-color: #2CD8D5;
+    padding: 20px;
+    padding-bottom: 25px;
+    border-radius:20%;
+    border-bottom-left-radius: 30%;
+    border-bottom-right-radius: 35%;
+    border-top-left-radius: 35%;
+    border-top-right-radius: 35%;
+    border-color: blue;
+    border-width: 3.5px;
+    box-shadow: #2CD8D5;
+    margin: 10px;
+
+}
+.classButton:hover {
+    opacity: 60%;
+    border-color:aquamarine;
+    border-style: dashed;
+}
+
+#testEvent3-id-input {
+    border-color: #2CD8D5;
+    border-width: 5px;
+    margin: 10px;
 }
